feat: show array elements (#17)
