# src/Heartbeat/Endpoints/Models.cs
@@ -42,6 +42,8 @@ public record ClrObjectField(
     string Value,
     string? Name);
 
+public record struct ClrObjectArrayItem(int Index, ulong Address, string? Value);
+
 public record Module(ulong Address, ulong Size, string? Name);
 
 public record HeapSegment(ulong Start, ulong End, GCSegmentKind Kind)
